@@ -1,6 +1,7 @@
 Revision history for Dist-Build-XS-PkgConfig
 
           - Allow library name as sole pkg_config argument
+          - Split out arguments into the different categories
 
 0.001     2024-09-13 22:10:16+0200
           - Initial release to an unsuspecting world
